[project]
name = "online-markdown-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "fastapi==0.110.2",
    "html2text==2020.1.16",
    "lxml==4.9.3",
    "pydantic==2.7.1",
    "requests==2.31.0",
    "urllib3==2.0.7",
    "uvicorn==0.29.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
